# rip

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SPEC.md
.claude/: launch.json  settings.local.json
.github/workflows/: nodejs.yml
examples/: aircraft-gallery.rip  burger-barn.bin.html  burger-barn.html  burger-barn.raster  burger-barn.rip  burger-barn.tab  burger-barn.txt  column-wrapping.rip  kitchen-sink.html  kitchen-sink.raster  kitchen-sink.tab  kitchen-sink.txt  print-image.raster  print-image.tab  readme-example.rip  send-to-printer.ps1
rip/: Cargo.toml
rip/src/: lib.rs
rip_android/: Cargo.toml  README.md  build_aar.sh
rip_android/kotlin/: build.gradle.kts
rip_android/kotlin/src/main/kotlin/com/zachzurn/rip/: PixelOutput.kt  Rip.kt  RipNative.kt  RipRenderException.kt  RipResources.kt
rip_android/src/: lib.rs
rip_cli/: Cargo.toml
rip_cli/src/: main.rs
rip_escpos/: Cargo.toml
rip_escpos/src/: cmd.rs  lib.rs
rip_html/: Cargo.toml
rip_html/src/: lib.rs
rip_image/: Cargo.toml
rip_image/src/: barcode.rs  canvas.rs  layout.rs  lib.rs  render.rs  text.rs
rip_image/tests/: render_tests.rs
rip_nodejs/: Cargo.toml  DEPLOY.md  README.md  index.d.ts  index.js  package-lock.json  package.json  test_resources.mjs  test_smoke.mjs
rip_nodejs/npm/darwin-arm64/: README.md  package.json
rip_nodejs/npm/darwin-x64/: README.md  package.json
rip_nodejs/npm/linux-arm64-gnu/: README.md  package.json
rip_nodejs/npm/linux-x64-gnu/: README.md  package.json
rip_nodejs/npm/linux-x64-musl/: README.md  package.json
rip_nodejs/npm/win32-x64-msvc/: README.md  package.json
rip_nodejs/src/: lib.rs
rip_parser/: Cargo.toml
rip_parser/src/: ast.rs  encode.rs  inline.rs  lib.rs  parser.rs  text_util.rs
rip_parser/tests/: parser_tests.rs
rip_resources/: Cargo.toml
rip_resources/src/: dither.rs  lib.rs
rip_text/: Cargo.toml
rip_text/src/: lib.rs
rip_wasm/: Cargo.toml  build_pkg.sh  package.json  test_smoke.mjs
rip_wasm/browser_demo/: index.html  serve.mjs
rip_wasm/js/: rip.d.ts
rip_wasm/node_demo/: index.html  serve.mjs
rip_wasm/pkg/: README.md  rip.d.ts  rip.mjs  rip_wasm.d.ts  rip_wasm.js  rip_wasm_bg.wasm  rip_wasm_bg.wasm.d.ts
rip_wasm/src/: lib.rs
rip_wasm/tests/: wasm_tests.rs
