[package]
name = "rip_html"
version = "0.1.0"
edition = "2021"
description = "HTML renderer for Rip markup"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zachzurn/rip"
authors = ["Zach Zurn"]

[dependencies]
rip_parser = { path = "../rip_parser" }
qrcode = "0.14"
barcoders = "2.0"

[dev-dependencies]
pretty_assertions = "1"
