[package]
name = "rip_image"
version = "0.1.0"
edition = "2021"
description = "Grayscale image renderer for Rip markup"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zachzurn/rip"
authors = ["Zach Zurn"]

[dependencies]
rip_parser = { path = "../rip_parser" }
fontdue = "0.9"
taffy = "0.9"

[dev-dependencies]
pretty_assertions = "1"
