[package]
name = "rip_wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for Rip receipt markup rendering"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zachzurn/rip"
authors = ["Zach Zurn"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rip = { path = "../rip" }
rip_parser = { path = "../rip_parser" }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
